fix footer on mobile view and finished review slider

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,7 +65,7 @@
 }
 
 .navbar-default {
-	font-size: 15px;
+	font-size: 18px;
 	background-color: #F2C88E;
 	box-shadow: 0px -4px 15px 2px #000000;
 	-webkit-box-shadow: 0px -4px 15px 2px #000000;
@@ -91,7 +91,7 @@
 }
 
 .navbar-right {
-/*	margin-right: 10px;*/
+	margin-right: 0px;
   margin-top: 35px;
 }
 
